nicerapp/domainConfigs/localhost_v2/index.css
/* ... */
.vdSettings img {
    position : absolute;
    top : 0px;
    left : 0px;
    width : 50px;
    z-index : 5000;
}
.sliderOpacityRange {
    position : absolute;
    top : -2px;
    left : 55px;
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: calc(100% - 55px); /* Full-width */
    height: 25px; /* Specified height */
    background: rgba(0,0,0,0.95); /* Grey background */
    z-index : 5000;
    border : 2px ridge rgba(100,100,100,0.7);
    border-radius : 8px;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}
.sliderOpacityRange:hover {
  opacity: 1; /* Fully shown on mouse-over */
}
.sliderOpacityRange::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

.sliderOpacityRangeDialogSettings {
    vertical-align : middle;
    position : absolute;
    left : 5px;
    display : none;
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: calc(100% - 15px); /* Full-width */
    height: 25px; /* Specified height */
    background: rgba(0,0,0,0.95); /* Grey background */
    z-index : 5000;
    border : 2px ridge rgba(100,100,100,0.7);
    border-radius : 8px;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}
.sliderOpacityRangeDialogSettings:hover {
  opacity: 1; /* Fully shown on mouse-over */
}
.sliderOpacityRangeDialogSettings::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

.sliderOpacityRangeBorderSettings {
    position : relative;
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    height: 25px; /* Specified height */
    background: rgba(0,0,0,0.95); /* Grey background */
    z-index : 5000;
    border : 2px ridge rgba(100,100,100,0.7);
    border-radius : 8px;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}
.sliderOpacityRangeBorderSettings:hover {
  opacity: 1; /* Fully shown on mouse-over */
}
.sliderOpacityRangeBorderSettings::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

#borderSettings {
    position : absolute;
    display : none;
    flex-wrap : wrap;
    justify-content : center;
    align-items : center;
    top : 70px;
    width : calc(100% - 10px);
}
.flexBreak {
    flex-basis : 100%;
    height : 0;
}


#siteMenu {
    top : 1vh;
    left : calc(2vw + 340px);
    width : 220px;
    height : 1.5rem;
}
#siteMenu.phoneView {
    left : calc(1vw + 50px);
}

#siteRegistration {
    display : none;
    position : absolute;
    width : 400px;
    height : auto;
    left : calc(50% - 200px);
    top : calc(50% - 125px);
    padding : 15px;
    z-index : 2000;
}
#siteRegistration:before { 
    content : '';
    background : url('/nicerapp/siteMedia/backgrounds/tiled/active/blue/seamless-texture-blue-watercolor.jpg') repeat;
    opacity : 0.7;
    position:absolute;
    z-index:-1;
    border-radius : 15px;
    top : 0;
    left : 0;
    width : 100%;
    height : 100%;
}
#siteRegistration input {
    width : calc(100% - 178px);
    border-radius : 8px;
    background : rgba(255,255,255,0.7);
    font-size : 1.1rem;
    margin : 4px;
    outline : 0;
}

#siteRegistrationContainer {
    position : relative;
    height : auto;
    display : flex;
    flex-direction : column;
}
#btnSrfSubmit {
    position : relative;
}
.button img {
    height : 1.5rem;
}
#siteRegistrationError {
    display : none;
    border-radius : 8px;
    padding : 5px;
    background : white;
    color : red;
}

#siteLogin {
    display : none;
    position : absolute;
    width : 400px;
    height : auto;
    left : calc(50% - 200px);
    top : calc(50% - 125px);
    padding : 15px;
    z-index : 2000;
    text-align : center;
    justify-content : center;
}
#siteLogin input {
    width : calc(100% - 178px);
    background : rgba(255,255,255,0.7);
    border-radius : 8px;
    font-size : 1.1rem;
    outline : 0;
    margin : 4px;
}
#siteLogin:before { 
    content : '';
    background : url('/nicerapp/siteMedia/backgrounds/tiled/active/green/409537396_fa312a886d.jpg') repeat;
    opacity : 0.7;
    position:absolute;
    z-index:-1;
    border-radius : 15px;
    top : 0;
    left : 0;
    width : 100%;
    height : 100%;
}
#siteLoginContainer {
    position : relative;
    height : auto;
    display : flex;
    flex-direction : column;
    align-items : center;
}
#btnLogin {
    position : relative;
}

.buttonHolder {
    display: inline-block;
    position:relative;
    text-align : center;
    vertical-align : middle;
    margin-top : 0.5rem;
    z-index : 1000;
}
.button {
 	cursor: pointer;
	position: relative;
	padding: 1rem 1rem;
    margin : 0.5rem;
	border-radius: 1rem;
	line-height: 2rem;
	font-size: 1.5rem;
	font-weight: 555;
    outline : 0;
	border: 1px solid #012880;
	background-image: linear-gradient(-180deg, #00FF00 0%, #00AA00 100%);
	box-shadow: 1rem 1rem 1.25rem 0 rgba(0,0,0,0.50),
							0 -0.25rem 1.5rem rgba(0, 80, 0, 1) inset,
							0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
							0 0.25rem 0.5rem 0 rgba(0, 80, 0, 1) inset;    
}
/* ... */

